# graspit_moveit_controller

./: CMakeLists.txt  package.xml  setup.py
configs/: barrett.grasping.yaml  barrett.workspace.yaml  mico.grasping.yaml  mico.workspace.yaml  pr2_left.grasping.yaml  pr2_left.workspace.yaml  staubli.grasping.yaml  staubli.workspace.scene  staubli.workspace.yaml
launch/: mico_tp_demo.launch  moveit_trajectory_planner.launch  pr2_tp_demo.launch  staubli_tp_demo.launch  trajectory_planner_demo.launch
scripts/: #grasp_analyzer_test.py#  .#grasp_analyzer_test.py  MovementExecutor.py  ReachabilityChecker.py  WorldManager.py  after_grasping_state_helper.py  barrett_manager.py  check_reachability_node.py  convert_graspit_msg.py  crui_manager.py  frames.gv  grasp_analyzer_node.py  grasp_analyzer_test.py  grasp_execution_node.py  grasp_handler_node.py  grasp_message_robot_server.py  graspit_moveit_controller.py  manual_grasp_execution_node.py  model_rec_manager.py  moveit_trajectory_planner_node.py  object_filename_dict.py  session.py  test_script.py  test_trajectory_analysis.py  trajectory_planner.py  world_manager_node.py
scripts/common_helpers/: GraspManager.py  convert_graspit_msg.py  grasp_joint_message_utils.py  grasp_reachability_analyzer.py  grasping_client.py  message_utils.py
scripts/grasp_analyzer_helpers/: demonstration_pose_analyzer.py
scripts/grasp_execution_helpers/: barrett_manager.py  execution_pipeline.py  execution_stages.py  jaco_manager.py  mico_interface.py  movement_executor.py  robot_interface.py
scripts/world_manager_helpers/: extended_planning_scene_interface.py  model_rec_manager.py  model_rec_manager2.py  object_filename_dict.py
src/graspit_moveit_controller/: grasping_controller.py  graspit_moveit_message_utils.py
srv/: AnalyzePose.srv  BoxInfo.srv  LocationInfo.srv  MeshInfo.srv
tests/: mico_moveit_trajectory_planner_test_node.py  moveit_trajectory_planner_test_node.py  restart_grasp_analyzer_node.bash  staubli_moveit_trajectory_planner_test_node.py  test_grasp_pose_helpers.py
