<?xml version="1.0"?>
<package>
  <name>graspit_moveit_controller</name>
  <version>0.0.0</version>
  <description>Code for interfacing with Moveit! and Graspit! grasps using pick and place</description>

  <maintainer email="davidwatkins@cs.columbia.edu">David Watkins</maintainer>

  <license>LGPLv3</license>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>model_rec2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>graspit_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>model_rec2</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>graspit_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>actionlib</run_depend>

  <export>

  </export>
</package>